Upgrade to Java 24